--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "axios": "^0.20.0",
     "bl": "^4.0.3",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "googleapis": "^66.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.8",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "request": "^2.88.2",
