--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.1",
     "multer": "^1.4.2",
+    "node-sass": "^5.0.0",
     "nodemailer": "^6.4.8",
-    "nodemon": "^2.0.6",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
